# audio_chat_room

./: .gitignore  CMakeLists.txt  Config.h  IMToolBox.h  README.md  conanfile.txt  else  main.cpp  mychatroom.cpp  mychatroom.h  mychatroom.h.autosave  mychatroom.ui  myqq.h  resource.qrc  sql.pro  sql.pro.user.3de7c3e  sql.pro.user.f9506dd  useritem.cpp  videoitem.h  设计文档.md
NetApi/: udp_net.h
audio/: AbstractAudioFrameProvider.h  AudioChat.cpp  AudioChat.h  CMakeLists.txt  UdpConnector.cpp  UdpConnector.h  audio.pri  audio.pri.autosave  audio_read.cpp  audio_read.cpp.autosave  audio_read.h  audio_read.h.autosave  audio_write.cpp  audio_write.cpp.autosave  audio_write.h  audio_write.h.autosave  audiochat.cpp  audiochat.h  audiocollector.cpp  audiocollector.h  audiodevices.cpp  audiodevices.h  audiolevel.cpp  audiolevel.h  audioplayer.cpp  audioplayer.h  audiosynthesizer.cpp  audiosynthesizer.h  world.h
audio/test/: main.cpp
audio_codec/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  audio_codec.pri  opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  opus_encoder.h  types.h
common/: IMToolBox.cpp  IMToolBox.h  common.pri  customwidget.h
config/: conan_win_profile  user.sql
doc/: AudioChat类图  doc.md  时序图.uml  简化版类图.uml  语音聊天室信令接口文档.md
log/: log.h
login_register/: common.h  login.cpp  login.h  login.ui  login_register.pri  registerwin.cpp  registerwin.h  registerwin.ui
meet_room/: meet_room.pri  roomdialog.cpp  roomdialog.h  roomdialog.ui  useritem.cpp  useritem.h  userlist.cpp  userlist.h  userwidget.cpp  userwidget.h
net_api/: net_api.pri  pack_def.h  qmytcp_client.cpp  qmytcp_client.h  tcp_net.cpp  tcp_net.h  udp_net.cpp  udp_net.h
server/: main.cpp  makefile  nohup.out  readme.md  run.sh  server  tcp_server  test  test.cpp  test.sh  udp_server  udp_server.cpp
server/include/: mysql_server.h  pack_def.h  tcp_kernel.h  tcp_net.h  thread_pool.h  udp_net.h
server/src/: AudioChatRoomServer.cpp  mysql_server.cpp  tcp_kernel.cpp  tcp_net.cpp  thread_pool.cpp  udp_net.cpp
src/: Config.h  main.cpp  mainwindow.ui  mychatroom.ui  myqq.cpp  myqq.ui  videoitem.cpp
src/audio/: AbstractAudioFrameProvider.h  AudioChat.cpp  AudioChat.h  UdpConnector.cpp  UdpConnector.h  audiocollector.cpp  audiocollector.h  audiolevel.cpp  audioplayer.cpp  audioplayer.h  audiosynthesizer.cpp  audiosynthesizer.h
src/audio_codec/: opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  types.h
src/example/: audio_server.cpp  audio_server.h  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  pair.cpp  pair.h
src/log/: log.h
src/login_register/: common.h  login.h  registerwin.cpp  registerwin.h
src/meet_room/: roomdialog.h  roomdialog.ui  useritem.h  userlist.h  userwidget.cpp
src/net_api/: pack_def.h  qmytcp_client.cpp  qmytcp_client.h  tcp_net.cpp
structs/: AudioFrame.h  Msg.h  structs.pri
设计文档.assets/: 设计文档.md
